# foxtrot-vivado-2024

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-python.yml
src/foxtrot_vivado_2024/: __init__.py  eda_plugin.py
src/foxtrot_vivado_2024/scripts/tcl/: constraints_locs.tcl  constraints_pins.tcl  netlist_export.tcl  placement_export.tcl  project_setup.tcl  run_flow.tcl  tool_options.tcl
